tests/unit/default/syntax-error/155-alter-table-to.x.t
---- IN ----
*%table=>|
---- OUT ----
---- ERR ----
syntax: expected <table> after `*%table=>` near `|` at position 9 - at line 1
---- EXIT ----
1
